# cuco-installer-fixer

./: README.md  pyproject.toml
src/: main.py
